5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1594_2425.log
== TEST (2019-03-26 16:21:30) 
-- CODE:
# Leitura da quilometragem total
km = float(input("Qual quilometragem total? "))

# Leitura do combustivel gasto
gas = float(input("Qual o total de combustivel gasto? "))

# Calculo do consumo medio
cm = Km/Gas

# saida
print(round(cm, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    cm = Km/Gas
NameError: name 'Km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:21:55) 
-- CODE:
# Leitura da quilometragem total
km = float(input("Qual quilometragem total? "))

# Leitura do combustivel gasto
gas = float(input("Qual o total de combustivel gasto? "))

# Calculo do consumo medio
cm = km/gas

# saida
print(round(cm, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:07) 
-- CODE:
# Leitura da quilometragem total
km = float(input("Qual quilometragem total? "))

# Leitura do combustivel gasto
gas = float(input("Qual o total de combustivel gasto? "))

# Calculo do consumo medio
cm = km/gas

# saida
print(round(cm, 3))

-- EXECUTION TIME:
0.213772
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:46) 
-- CODE:
# Leitura da quilometragem total
km = float(input("Qual quilometragem total? "))

# Leitura do combustivel gasto
gas = float(input("Qual o total de combustivel gasto? "))

# Calculo do consumo medio
cm = km/gas

# saida
print(round(cm, 3), "km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:23:02) 
-- CODE:
# Leitura da quilometragem total
km = float(input("Qual quilometragem total? "))

# Leitura do combustivel gasto
gas = float(input("Qual o total de combustivel gasto? "))

# Calculo do consumo medio
cm = km/gas

# saida
print(round(cm, 3), "km/l")

-- EXECUTION TIME:
0.142698
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
